Added my connection with database to source

--- a/_source/LigaCancer/appsettings.json
+++ b/_source/LigaCancer/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-LigaCancer-64C21C05-246D-44A3-913D-874313CD67E8;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "server=localhost;port=3306;database=cancer;uid=root;password=88250293"
   },
   "Logging": {
     "LogLevel": {
