Implemented Delete phone

--- a/_source/LigaCancer/LigaCancer.csproj
+++ b/_source/LigaCancer/LigaCancer.csproj
@@ -40,6 +40,9 @@
     <Content Update="Views\Patient\_AddAddress.cshtml">
       <Pack>$(IncludeRazorContentInPack)</Pack>
     </Content>
+    <Content Update="Views\Phone\_DeletePhone.cshtml">
+      <Pack>$(IncludeRazorContentInPack)</Pack>
+    </Content>
     <Content Update="Views\Patient\_DeletePatient.cshtml">
       <Pack>$(IncludeRazorContentInPack)</Pack>
     </Content>
