Added authorization and add file

--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,4 @@ msbuild.wrn
 
 _source/LigaCancer/wwwroot/lib/
 _source/LigaCancer/Properties/PublishProfiles/
+_source/LigaCancer/wwwroot/uploads/
