--- a/_source/LigaCancer/LigaCancer.csproj
+++ b/_source/LigaCancer/LigaCancer.csproj
@@ -24,6 +24,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Controllers\Api\" />
     <Folder Include="wwwroot\lib\jquery-validation-unobtrusive\" />
   </ItemGroup>
 
