--- a/_source/LigaCancer/bower.json
+++ b/_source/LigaCancer/bower.json
@@ -2,7 +2,10 @@
   "name": "asp.net",
   "private": true,
   "dependencies": {
-    "jquery-ajax-unobtrusive": "^3.2.5",
-    "fontawesome": "font-awesome#5.3.1"
+    "jquery-ajax-unobtrusive": "v3.2.6",
+    "fontawesome": "5.5.0"
+  },
+  "resolutions": {
+    "fontawesome": "5.5.0"
   }
 }
