Added bundle and minification

--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,4 @@ msbuild.wrn
 _source/LigaCancer/wwwroot/lib/
 _source/LigaCancer/Properties/PublishProfiles/
 _source/LigaCancer/wwwroot/uploads/
+_source/LigaCancer/wwwroot/dist/
