--- a/_source/LigaCancer/appsettings.json
+++ b/_source/LigaCancer/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "server=localhost;port=3306;database=cancer;uid=root;password=88250293"
+    "DefaultConnection": "server=localhost;port=3306;database=lvcc;uid=root;password=123456"
   },
   "Logging": {
     "LogLevel": {
