--- a/_source/LigaCancer/bundleconfig.json
+++ b/_source/LigaCancer/bundleconfig.json
@@ -169,5 +169,34 @@
       "outputMode": "singleLine",
       "renameLocals": true
     }
+  },
+  {
+    "outputFileName": "wwwroot/dist/js/presence.min.css",
+    "inputFiles": [
+      "wwwroot/lib/select2/css/select2.min.css",
+      "wwwroot/lib/select2/theme/select2-bootstrap.min.css",
+      "wwwroot/lib/datatables/css/dataTables.bootstrap4.min.css",
+      "wwwroot/lib/gijgo/combined/css/gijgo.min.css"
+    ],
+    "minify": {
+      "enabled": true,
+      "outputMode": "singleLine",
+      "renameLocals": true
+    }
+  },
+  {
+    "outputFileName": "wwwroot/dist/js/presence.min.js",
+    "inputFiles": [
+      "wwwroot/lib/datatables/js/jquery.dataTables.min.js",
+      "wwwroot/lib/datatables/js/dataTables.bootstrap4.min.js",
+      "wwwroot/lib/select2/js/select2.min.js",
+      "wwwroot/lib/gijgo/combined/js/gijgo.min.js",
+      "wwwroot/js/presence.js"
+    ],
+    "minify": {
+      "enabled": true,
+      "outputMode": "singleLine",
+      "renameLocals": true
+    }
   }
 ]
