--- a/_source/LigaCancer/bundleconfig.json
+++ b/_source/LigaCancer/bundleconfig.json
@@ -103,6 +103,12 @@
     "inputFiles": [
       "wwwroot/lib/datatables/js/jquery.dataTables.min.js",
       "wwwroot/lib/datatables/js/dataTables.bootstrap4.min.js",
+      "wwwroot/lib/datatables-buttons/js/dataTables.buttons.min.js",
+      "wwwroot/lib/datatables-buttons-bs4/js/buttons.bootstrap4.min.js",
+      "wwwroot/lib/jszip/jszip.min.js",
+      "wwwroot/lib/pdfmake/pdfmake.min.js",
+      "wwwroot/lib/pdfmake/vfs_fonts.js",
+      "wwwroot/lib/datatables-buttons/js/buttons.html5.min.js",
       "wwwroot/js/cancerType.js"
     ],
     "minify": {
