#71 Added phone crud to edit option on patient

--- a/_source/LigaCancer/LigaCancer.csproj
+++ b/_source/LigaCancer/LigaCancer.csproj
@@ -100,10 +100,13 @@
     <Content Update="Views\Address\_EditAddress.cshtml">
       <Pack>$(IncludeRazorContentInPack)</Pack>
     </Content>
-    <Content Update="Views\Phone\_AddPhone.cshtml">
+    <Content Update="Views\Phone\Partials\_Index.cshtml">
       <Pack>$(IncludeRazorContentInPack)</Pack>
     </Content>
-    <Content Update="Views\Phone\_EditPhone.cshtml">
+    <Content Update="Views\Phone\Partials\_AddPhone.cshtml">
+      <Pack>$(IncludeRazorContentInPack)</Pack>
+    </Content>
+    <Content Update="Views\Phone\Partials\_EditPhone.cshtml">
       <Pack>$(IncludeRazorContentInPack)</Pack>
     </Content>
     <Content Update="Views\Patient\Partials\_ArchivePatient.cshtml">
