--- a/_source/LigaCancer/bundleconfig.json
+++ b/_source/LigaCancer/bundleconfig.json
@@ -57,7 +57,8 @@
   {
     "outputFileName": "wwwroot/dist/js/patient.min.js",
     "inputFiles": [
-      "wwwroot/lib/select2/js/select2.min.js",
+      "wwwroot/lib/select2/js/select2.full.min.js",
+      "wwwroot/lib/select2/js/i18n/pt-BR.js",
       "wwwroot/lib/datatables/js/jquery.dataTables.min.js",
       "wwwroot/lib/datatables/js/dataTables.bootstrap4.min.js",
       "js/patient.js"
@@ -176,20 +177,6 @@
     }
   },
   {
-    "outputFileName": "wwwroot/dist/js/patient-details.min.js",
-    "inputFiles": [
-      "wwwroot/lib/datatables/js/jquery.dataTables.min.js",
-      "wwwroot/lib/datatables/js/dataTables.bootstrap4.min.js",
-      "wwwroot/lib/select2/js/select2.min.js",
-      "wwwroot/js/patient-details.js"
-    ],
-    "minify": {
-      "enabled": true,
-      "outputMode": "singleLine",
-      "renameLocals": true
-    }
-  },
-  {
     "outputFileName": "wwwroot/dist/css/presence.min.css",
     "inputFiles": [
       "wwwroot/lib/select2/css/select2.min.css",
@@ -209,7 +196,8 @@
     "inputFiles": [
       "wwwroot/lib/datatables/js/jquery.dataTables.min.js",
       "wwwroot/lib/datatables/js/dataTables.bootstrap4.min.js",
-      "wwwroot/lib/select2/js/select2.min.js",
+      "wwwroot/lib/select2/js/select2.full.min.js",
+      "wwwroot/lib/select2/js/i18n/pt-BR.js",
       "wwwroot/lib/gijgo/combined/js/gijgo.min.js",
       "wwwroot/lib/datatables-buttons/js/dataTables.buttons.min.js",
       "wwwroot/lib/datatables-buttons-bs4/js/buttons.bootstrap4.min.js",
