#9 Logs on controllers and in api controllers

--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,4 @@ _source/LigaCancer/wwwroot/lib/
 _source/LigaCancer/Properties/PublishProfiles/
 _source/LigaCancer/wwwroot/uploads/
 _source/LigaCancer/wwwroot/dist/
+_source/LigaCancer/Logs/
